# lab

./: .gitignore  mypy.ini  pyproject.toml  pytest.ini
src/: setup.py
src/djangoapp/app/: asgi.py  settings.py  urls.py  wsgi.py
src/djangoapp/common/: apps.py  fields.py  models.py  utils.py
src/djangoapp/lab/: admin.py  apps.py  queries.py  urls.py
src/djangoapp/lab/api/: defects.py  lifecase.py  lifecase_defect.py
src/djangoapp/lab/migrations/: 0001_initial.py  0002_alter_materialdefectmodel_id_and_more.py  0002_alter_selectedpreviouscases_id.py  0003_alter_materialdefectmodel_id_and_more.py  0003_rename_selectedpreviouscases_selectedpreviouscasemodel.py
src/djangoapp/lab/models/: defect.py  flask.py  lifecase.py  lifecase_defect.py  patient.py  previous_case.py  selected_previous_case.py
src/laboratory/: application.py
src/laboratory/common/application/: command.py
src/laboratory/common/domain/: entities.py  execeptions.py  repository.py  rules.py  types.py  value_objects.py
src/laboratory/common/infrastructure/: repository.py  unit_of_work.py
src/laboratory/dictionaries/domain/: enums.py  flask_defect.py  lifecase_defect.py  repository.py
src/laboratory/dictionaries/infrastructure/: defects_repository.py
src/laboratory/lifecase/application/: __init__.py
src/laboratory/lifecase/domain/: flask.py  lifecase.py  repository.py  rules.py  value_objects.py
src/laboratory/patient/domain/: patient.py  (+2 more)
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py
tests/unit/: test_application.py  test_domain.py
(+11 files in other folders)
